<resources>
    <string name="standardNotSavedToast">"Not Saved. Unfortunately The Data could not be Saved. Please check messages for the reason(s)."</string>
    <string name="standardSavedToast">"Saved. The Data has been Saved."</string>
    <string name="mainbutton_stores">STORES</string>
    <string name="mainbutton_aisles">AISLES</string>
    <string name="mainbutton_products">PRODUCTS</string>
    <string name="mainbutton_addtoshoppinglist">TO GET</string>
    <string name="mainbutton_rules">RULES</string>
    <string name="mainbutton_shoppinglist">SHOPPING</string>
    <string name="mainbutton_dbdata">DATA</string>
    <string name="mainbutton_dbschema">SCHEMA</string>
    <string name="mainscreen_welcomemessage1">Welcome to Shopper</string>
    <string name="mainscreen_welcomemessage2">Making Shopping A Little Easier</string>
    <string name="mainscreen_imagedescription"> </string>
    <string name="general_count_prefix">Number of</string>
    <string name="shoplabel">Store</string>
    <string name="shoplabel_plural">Stores</string>
    <string name="shopnamelabel">Store Name</string>
    <string name="shopnamelabel_plural">Store Names</string>
    <string name="currentshops">Current Stores</string>
    <string name="shopname_maxcharacters">48</string>
    <string name="shopstreetlabel">Street</string>
    <string name="shopstreetlabel_plural">Streets</string>
    <string name="shopcitylabel">City</string>
    <string name="shopcitylabel_plural">Cities</string>
    <string name="shophint">The name of the Store you are adding goes here.</string>
    <string name="shoporderlabel">Order</string>
    <string name="shoporder_info">Shopping Order (lower numbers first)</string>
    <string name="shoporderdefault">1000</string>
    <string name="shopstreet_label">Street</string>
    <string name="shopstreet_info">Used to distinguish Stores with the same name</string>
    <string name="shopstreet">Street Address (to distinguish this from other Stores with the same name)</string>
    <string name="shopstreethint">The Street address of the Store goes here.</string>
    <string name="shopcity">City/Suburb (again to distinguish this from other Stores of the same name</string>
    <string name="shopcityhint">City, Suburb or Locality of the Store goes here.</string>
    <string name="shopstate">State</string>
    <string name="shopstatelabel">State</string>
    <string name="shopstatehint">The State, Region, County or District in which the Store is located goes here.</string>
    <string name="shopphone">Phone No.</string>
    <string name="shopphonehint">The phone number of the Store goes here. Note! you are not restricted to numbers.</string>
    <string name="shopnotes">Notes</string>
    <string name="shopnoteshint">Any notes you wish to make regarding the Store can go here.</string>
    <string name="shopsavebutton">Save</string>
    <string name="shoplistclicktitle">Store Edit/Stock Option Selection.</string>
    <string name="shoplistclickmessage">Select the appropriate option:-
       \n\n\tEDIT to change the Store details.
        \n\n\tSTOCK to add products to the Store.
        \n\n\tBACK to return to the Store List.
        \n\n\t\t\tNote! STOCK option will not be present when a Store has no Aisles.
    </string>
    <string name="shoplistlongclicktitle">Confirm Store Delete!</string>
    <string name="shoplistclicknoproductsmessage">
        Select the appropriate option:-
        \n\n\tEDIT to change Store details.
        \n\n\tBACK to return to the Store List.\n\n\
    </string>
    <string name="shoplistlongclickmessage">Please confirm, by clicking DELETE, that you want to Delete Store:-\n\t</string>
    <string name="shoplistlongclickmessageextra">\n\n\tNote! This will delete Aisles and underlying Produce in the Store.
        \n\n\t\tThe produce is only removed from the Aisles not from the list of Produce.
        \n\n\t\tHowever, store specific information for the Produce, such as the cost, will be deleted.</string>
    <string name="shopnonetitle">No Stores!</string>
    <string name="shopnonametitle">Store Name Required!</string>
    <string name="shopnonametext001">A Store cannot be added without a Name.
        \n\nPlease enter a Name and then click on the Save button.
        \n\nNote! The Store name is the only required field, all the other fields can be omitted.</string>
    <string name="shopaddaisletitle">Add Aisle(s) to Store?</string>
    <string name="shopaddaisletext001">Do you wish to Add Aisles to Store:-\n\t</string>
    <string name="shopaddaisletext002">\?</string>
    <string name="shoppinglistoriginalvales">Original Shopping-List values</string>
    <string name="aisleslabel">Aisles</string>
    <string name="aisleshoplabel">Store where the Aisle is Located</string>
    <string name="aislelabel">Aisle Name</string>
    <string name="aislelabel_plural">Aisles</string>
    <string name="aislenamehint">The name of the Aisle you are adding goes here.</string>
    <string name="aisleorderlabel">Order of the Aisle (lower numbers come first, default is 1000)</string>
    <string name="aisleorderlabelshort">Order</string>
    <string name="aisleorderdefault">1000</string>
    <string name="aislenamenotgiventitle">Aisle Name Required</string>
    <string name="aislenamenotgiventext">Cannot add Aisle as the Aisle Name has not been given.\n\nPlease enter an Aisle Name and then click on the Save button.</string>
    <string name="aislelistclicktitle">Aisle Edit/Stock Option Selection.</string>
    <string name="aislelistclicktext001">Select the appropriate option:-
    \n\n\tEDIT to change the Aisle details.
    \n\n\tSTOCK to add products to the Aisle.
    \n\n\tBACK to return to the Store List.\n\n</string>
    <string name="shophasnoaislestitle">Store has no Aisles - Products cannot be added.</string>
    <string name="shophasnoaislestext001">Store\u0020</string>
    <string name="shophasnoaislestext002">\u0020in\u0020</string>
    <string name="shophasnoaislestext003">\u0020has no aisles!
        \n\nDo you wish to add Aisles?
        \n\nNote! if you choose to Cancel, then you should select another Store.</string>
    <string name="aisleconfirmdeletetitle">Confirm Aisle Delete</string>
    <string name="aisleconfirmdeletetext001">Do you really want to Delete AISLE:-\n\t</string>
    <string name="aisleorderextra">(Lower numbers appear first)</string>
    <string name="standarddonebutton">DONE</string>
    <string name="standardsavebutton">SAVE</string>
    <string name="standardaddbuttontext">ADD</string>
    <string name="standardskipbuttontext">SKIP</string>
    <string name="standarddisablebuttontext">DISABLE</string>
    <string name="title_activity_reviewdisabledsuggestions">Review Disabled Suggestions</string>
    <string name="shoplist_instructions"><b>Click</b> on the <b>Add</b> button to add a <b>Store</b>.
        \n<b>Click</b> on <b>Done</b> button to return/go back.
        \n\n<b>Click</b> on a <b>Store</b> in the list to either :-
        \n\ta) <b>Edit</b> the <b>Store</b> or
        \n\tb) <b>Stock</b> the <b>Store</b> (Add products to the <b>Store</b>)
        \n\t\tNote! You can only <b>Stock</b> a <b>Store</b> if the <b>Store</b> has at least 1 Aisle
        \n\t\t\tand there is at least 1 <b>Product</b>
        \n\n<b>Long Click</b> on a <b>Store</b> in the list to <b><u>Delete</u></b> the <b>Store</b>
        \n\tNote all <b>Aisles</b> and thus  all <b>Products</b> in those <b>Aisles</b> will be deleted.
        \n\tThe <b>Products</b> would remain as <b>Products</b> in <b>produce</b>.
    </string>
    <string name="shopaddedit_instructions">Input or Amend the <b>Store Name</b>, <b>Order</b>, <b>Street</b>, <b>City</b>, <b>State</b>, <b>Phone</b> and <b>Notes</b> as required.
        \n<b>Click</b> the <b>Save</b> button to add/amend the Store.
        \nAlternately <b>Click</b> the <b>Done</b> button to return/go back.
        \n\n<b>Store Name</b> is required in order to <b>Save</b> the new/changed <b>Store</b>.
        \nAll other fields are optional. However, <b>City</b> and <b>Street</b> can help distinguish Stores with the same name.
        \n<b>State</b>, <b>Phone</b> and <b>Notes</b> are for your convenience.
    </string>
    <string name="usersettingslabel">Settings</string>
    <string name="datalabel">Data Handling</string>
    <string name="forcesuggestions">Rule Suggestions</string>
    <string name="rulesuggestmodify">Suggest Rule Modifications</string>
    <string name="sharedpreferencekey_developermode">devmode</string>
    <string name="developermode_label">Developer Mode</string>
    <string name="developermode_info">Developer mode increases the amount of data available to the user.
        \nTwo developer specific buttons are made available from the main/initial screen :-
        \n\tThe Data button shows Database data.
        \n\tThe Schema button displays the Database Schema.
        \nLogging activity is increased.
        \nAdditional information will also be avaialble to the user in the form of
        toasts and on screen information.
    </string>
    <string name="sharedpreferencekey_allowrulesuggest">allowrulesuggest</string>
    <string name="allowrulesuggest_label">Allow Rule Suggestions</string>
    <string name="allowrulesuggest_info">Allow Rule Suggestions allows for
        the suggestion of rules based upon recorded purchases.
        \n\nBy allowing rule suggestions a list of products, if any meet
        the criteria, will be displayed with a suggestion for the frequency.
        \n\nThe criteria are:
        \n\tThe product was first purchased at least 90 days ago and,
        \n\tthat no rule exists for the product.
        \n\nThis used in association with the Rule Suggestion Frequency setting (below).
    </string>
    <string name="sharedpreferencekey_rulesuggestfrequency">rulesuggestfrequency</string>
    <string name="rulesuggestfrequency_label">Rule Suggestion Frequency</string>
    <string name="rulesuggestfrequency_info">Rule Suggsetion Frequency determines how often Rule suggestion, if not turned off, will be checked.
        \n\nThe value is the number of days between checks and defaults to 30.
        \nThat is approximately on a monthly basis.
    </string>
    <string name="sharedpreferencekey_nextdatefromwhendone">nextdatefromwhendone</string>
    <string name="rulesuggestnextfromdatewhendone_label">Next Rule Suggest from When Done</string>
    <string name="rulesuggestnextfromdatewhendone_info">Determines the next Rule Suggestion
        Date/Time by adding the FREQUENCY to the Date/Time when the Suggestion was actioned.
        \n\tOtherwise, the next Rule Suggestion will be from the suggested Date/Time.
        \n\nExample, if FREQUENCY is 7 (weekly) and a month since Shopper was last used;
        \n\tIf unchecked, Rule Suggestion would be done 4 or 5 times. However, once only if checked.
    </string>
    <string name="sharedpreferencekey_showhelpmode">helpmode</string>
    <string name="showhelpmode_label">Disable Help Displays</string>
    <string name="showhelpmode_info">You can diasble help displays throughout Shopper.
        \nOverall this will give a more display space.
        \nIt is only advisable to disable help displays when you are comfortable with using Shopper.
    </string>
    <string name="sharedpreferencekey_strictbackupmode">strictbackupmode</string>
    <string name="strictbackupmode_label">Strict Backup Mode</string>
    <string name="strictbackupmode_info">This determines what backups are listed.
        \nIf checked then backup files listed will have to have be comprised of both the specified
        BaseFileName AND the specified File Extension.
        \n\nIf unchecked the backup files listed can have either the specified BaseFileName OR
        the specified File Extension.
        \n\nThe former, the default, is the safest, as it reduces the chance of selecting the
        wrong type of file.
    </string>
</resources>