<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
        <CheckBoxPreference
            android:title="@string/developermode_label"
            android:summary="@string/developermode_info"
            android:key="@string/sharedpreferencekey_developermode"
            android:defaultValue="false"
            />
        <CheckBoxPreference
            android:title="@string/showhelpmode_label"
            android:summary="@string/showhelpmode_info"
            android:key="@string/sharedpreferencekey_showhelpmode"
            android:defaultValue="false"
            />
        <CheckBoxPreference
            android:title="@string/allowrulesuggest_label"
            android:summary="@string/allowrulesuggest_info"
            android:key="@string/sharedpreferencekey_allowrulesuggest"
            android:defaultValue="true"
            />
        <EditTextPreference
            android:title="@string/rulesuggestfrequency_label"
            android:summary="@string/rulesuggestfrequency_info"
            android:key="@string/sharedpreferencekey_rulesuggestfrequency"
            android:defaultValue="@integer/rulesuggest_frequency"
            android:numeric="integer"
            android:digits="0123456789"
            android:inputType="numberDecimal"
            android:maxLength="5"
            />
        <CheckBoxPreference
            android:title="@string/rulesuggestnextfromdatewhendone_label"
            android:summary="@string/rulesuggestnextfromdatewhendone_info"
            android:key="@string/sharedpreferencekey_nextdatefromwhendone"
            android:defaultValue="true"
            />
        <CheckBoxPreference
                android:title="@string/strictbackupmode_label"
            android:summary="@string/strictbackupmode_info"
            android:key="@string/sharedpreferencekey_strictbackupmode"
            android:defaultValue="true"
            />
</PreferenceScreen>