<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/usersettings_menu"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/usersettingslabel" />
    <item android:id="@+id/dataoptions_menu"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/datalabel" />
    <item android:id="@+id/forcesuggestions"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/forcesuggestions"
        />
    <item
        android:id="@+id/reviewdisabledsuggestions"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/title_activity_reviewdisabledsuggestions"
        android:visible="false"
        />
    <item
        android:id="@+id/rulesuggestmodify"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/rulesuggestmodify"
        />
</menu>