<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mjt.shopper.ShopAddActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/asell_storebuttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_height">
        <TextView
            style="@style/textviewbutton"
            android:id="@+id/asbtn02"
            android:text="@string/standarddonebutton"
            android:onClick="doneAdding" />
        <TextView
            style="@style/textviewbutton"
            android:id="@+id/shopsavebutton"
            android:text="@string/standardsavebutton"
            android:onClick="saveClicked" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shopaddeedit_help_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/shopaddedit_help"
            style="@style/textview_help_style"
            android:text="@string/shopaddedit_instructions"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/asell_storename"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ase_storename_label"
            style="@style/textview_important_style"
            android:layout_weight="0.2"
            android:text="@string/shopnamelabel"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"/>
        <EditText
            android:id="@+id/ase_storename_input"
            style="@style/edittext_required_style"
            android:layout_weight="0.6"
            android:hint="@string/shophint"
            android:maxLength="@integer/shopname_maxcharacters"
            tools:ignore="LabelFor"/>
        <TextView
            style="@style/textview_normal_style"
            android:layout_weight="0.15"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/asell_storeorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ase_storeorder_label"
            style="@style/textview_normal_style"
            android:layout_weight="0.2"
            android:text="@string/shoporderlabel"
            />
        <TextView
            android:layout_width="0dp"
            style="@style/textview_normal_style"
            android:layout_weight="0.05"/>
        <EditText
            android:id="@+id/ase_storeorder_input"
            style="@style/edittext_optional_style"
            android:layout_weight="0.1"
            android:inputType="number"
            android:digits="0123456789"
            android:hint="@string/shoporderdefault"
            android:textColorHint="@color/colorstandardhint"
            android:maxLength="@integer/shoporder_maxcharacters"
            tools:ignore="LabelFor"/>
        <TextView
            style="@style/textview_normal_style"
            android:layout_weight="0.05"/>
        <TextView
            android:id="@+id/ase_storeorder_info"
            style="@style/textview_normal_style"
            android:layout_weight="0.6"
            android:text="@string/shoporder_info"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/asell_storestreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ase_storestreet_label"
            style="@style/textview_normal_style"
            android:layout_weight="0.2"
            android:text="@string/shopstreet_label"
            />
        <TextView
            style="@style/textview_normal_style"
            android:layout_weight="0.05"/>
        <EditText
            android:id="@+id/ase_storestreet_input"
            style="@style/edittext_optional_style"
            android:layout_weight="0.75"
            android:hint="@string/shopstreethint"
            android:textColorHint="@color/colorstandardhint"
            tools:ignore="LabelFor"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/asell_storecity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_subsubsubheading_height">
        <TextView
            android:id="@+id/ase_storecity_label"
            style="@style/textview_normal_style"
            android:layout_weight="0.2"
            android:text="@string/shopcity" />
        <TextView
            style="@style/textview_normal_style"
            android:layout_weight="0.05"/>
        <EditText
            android:id="@+id/ase_storecity_input"
            style="@style/edittext_optional_style"
            android:layout_weight="0.75"
            android:hint="@string/shopcityhint"
            android:textColorHint="@color/colorstandardhint"
            tools:ignore="LabelFor"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/asell_storestate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ase_storestate_label"
            style="@style/textview_normal_style"
            android:layout_weight="0.2"
            android:text="@string/shopstatelabel" />
        <TextView
            style="@style/textview_normal_style"
            android:layout_weight="0.05"/>
        <EditText
            android:id="@+id/ase_storestate_input"
            style="@style/edittext_optional_style"
            android:layout_weight="0.2"
            android:hint="@string/shopstatehint"
            android:textColorHint="@color/colorstandardhint"
            tools:ignore="LabelFor"/>
        <TextView
            style="@style/textview_normal_style"
            android:layout_weight="0.55"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/asell_storephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ase_storephone_label"
            style="@style/textview_normal_style"
            android:layout_weight="0.2"
            android:text="@string/shopphone"
            />
        <TextView
            style="@style/textview_normal_style"
            android:layout_weight="0.05"/>
        <EditText
            android:id="@+id/ase_storephone_input"
            style="@style/edittext_optional_style"
            android:layout_weight="0.175"
            android:hint="@string/shopphonehint"
            android:textColorHint="@color/colorstandardhint"
            tools:ignore="LabelFor"/>
        <TextView
            style="@style/textview_normal_style"
            android:layout_weight="0.575"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/asell_storenotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/ase_storenotes_label"
            style="@style/textview_normal_style"
            android:layout_weight="0.2"
            android:text="@string/shopnotes"
            />
        <TextView
            style="@style/textview_normal_style"
            android:layout_weight="0.05"/>
        <EditText
            android:id="@+id/ase_storenotes_input"
            style="@style/edittext_optional_style"
            android:layout_weight="0.75"
            android:hint="@string/shopnoteshint"
            android:textColorHint="@color/colorstandardhint"
            tools:ignore="LabelFor"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ase_shoplist_preheader_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorlistviewheading">
        <TextView
            android:id="@+id/ase_shoplist_preheader"
            style="@style/textview_listheadingtitle_style"
            android:layout_weight="0.3"
            android:text="@string/currentshops" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shoplist_heading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorlistviewheading">
        <TextView
            android:id="@+id/storelist_store_heading"
            style="@style/textview_listheading_style"
            android:layout_weight="0.89"
            android:text="@string/shoplabel"
            android:onClick="orderByStore"/>
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.005"/>
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.1"
            android:text="@string/shoporderlabel"
            android:onClick="orderByOrder"/>
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.005"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shoplist_heading2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorlistviewheading">
        <TextView
            android:id="@+id/storelist_city_heading"
            style="@style/textview_listheading_style"
            android:layout_weight="0.3"
            android:text="@string/shopcitylabel"
            android:textSize="@dimen/standard_subsubsubheading_text_size"
            android:onClick="orderByCity"
            />
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.005"
            />
        <TextView
            android:id="@+id/storelist_street_heading"
            style="@style/textview_listheading_style"
            android:layout_weight="0.4"
            android:text="@string/shopstreetlabel"
            android:onClick="orderByStreet"
            />
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.005"
            />
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.1"
            android:text="@string/shopstatelabel"
            android:onClick="orderByState"
            />
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.005"
            />
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight=".185"
            android:text="@string/shopphone"
            android:onClick="orderByPhone"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shoplist_heading3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorlistviewheading">
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="1"
            android:text="@string/shopnotes"
            android:onClick="orderByNotes"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/ase_shoplist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>
</LinearLayout>
