<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aslbc_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_dummy_size"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:descendantFocusability="beforeDescendants"
    tools:context="mjt.shopper.ShopListByCursorActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_button_height"
        android:layout_margin="@dimen/standard_dummy_size">
        <TextView
            android:id="@+id/aslbcbtn01"
            style="@style/textviewbutton"
            android:text="@string/standarddonebutton"
            android:onClick="aslbcDone">
        </TextView>
        <Button
            android:id="@+id/aslbcbtn02"
            style="@style/textviewbutton"
            android:text="@string/standardaddbuttontext"
            android:onClick="aslbcAddShop">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shoplist_help_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/shoplist_help"
            style="@style/textview_help_style"
            android:text="@string/shoplist_instructions" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shoplist_heading1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorlistviewheading">
        <TextView
            android:id="@+id/storelist_store_heading"
            style="@style/textview_listheading_style"
            android:layout_weight="0.89"
            android:text="@string/shoplabel"
            android:onClick="orderByStore"/>
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.005"/>
        <TextView
            android:id="@+id/storelist_order_heading"
            style="@style/textview_listheading_style"
            android:layout_weight="0.1"
            android:text="@string/shoporderlabel"
            android:onClick="orderByOrder"/>
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.005"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shoplist_heading2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorlistviewheading">
        <TextView
            android:id="@+id/storelist_city_heading"
            style="@style/textview_listheading_style"
            android:layout_weight="0.3"
            android:text="@string/shopcitylabel"
            android:onClick="orderByCity"/>
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.005"/>
        <TextView
            android:id="@+id/storelist_street_heading"
            style="@style/textview_listheading_style"
            android:layout_weight="0.4"
            android:text="@string/shopstreetlabel"
            android:onClick="orderByStreet"/>
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.005"/>
        <TextView
            android:id="@+id/storelist_state_heading"
            style="@style/textview_listheading_style"
            android:layout_weight="0.1"
            android:text="@string/shopstatelabel"
            android:onClick="orderByState"/>
        <TextView
            style="@style/textview_listheading_style"
            android:layout_weight="0.005"/>
        <TextView
            android:id="@+id/storelist_phone_heading"
            style="@style/textview_listheading_style"
            android:layout_weight=".185"
            android:text="@string/shopphone"
            android:onClick="orderByPhone"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shoplist_heading3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorlistviewheading">
        <TextView
            android:id="@+id/storelist_notes_heading"
            style="@style/textview_listheading_style"
            android:layout_weight="1"
            android:text="@string/shopnotes"
            android:onClick="orderByNotes"/>
    </LinearLayout>
    <ListView
        android:id="@+id/storelist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:longClickable="true">
    </ListView>
</LinearLayout>