<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/standard_listview_row_padding_vertical"
    android:paddingLeft="@dimen/standard_listview_row_padding_horizontal"
    android:paddingRight="@dimen/standard_listview_row_padding_horizontal"
    android:paddingTop="@dimen/standard_listview_row_padding_vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_listview_row_height">
        <TextView
            android:id="@+id/rsle_product_name_entry"
            style="@style/textview_listentryimportant_style"
            android:layout_weight="0.1"
            />
        <TextView
            android:id="@+id/rsle_shop_name_entry"
            style="@style/textview_listentryimportant_style"
            android:layout_weight="0.1"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_listview_row_height"
        >
        <TextView
            android:id="@+id/rsle_aisle_name_entry"
            style="@style/textview_listentryimportant_style"
            android:layout_weight="0.1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_listview_row_height"
        >
        <TextView
            android:id="@+id/rsle_frequency_entry"
            style="@style/textview_listentry_style"
            android:layout_weight="0.1"
            />
        <TextView
            android:id="@+id/rsle_addrulebutton_entry"
            style="@style/textviewbutton"
            android:layout_width="@dimen/standard_button_width"
            android:text="@string/standardaddbuttontext"
            android:onClick="onCLickAddButton"
            />
        <TextView
            android:id="@+id/rsle_dismissrulebutton_entry"
            style="@style/textviewbutton"
            android:width="@dimen/standard_button_width"
            android:text="@string/standardskipbuttontext"
            android:onClick="onClickSkipButton"
            />
        <TextView
            android:id="@+id/rsle_disablerulebutton_entry"
            style="@style/textviewwarnbutton"
            android:width="@dimen/standard_button_width"
            android:text="@string/standarddisablebuttontext"
            android:onClick="onClickDisableButton"
            />
    </LinearLayout>
</LinearLayout>